# gifts

./: README.md  pubspec.yaml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/gifts/: pubspec.yaml
package/gifts/example/: gifts_example.dart
package/gifts/lib/: gifts.dart
package/gifts/test/: gifts_test.dart
package/gifts_android/: README.md  pubspec.yaml
package/gifts_android/lib/: gifts_android.dart
package/gifts_android/test/: gifts_android_test.dart
package/gifts_apis/: pubspec.yaml
package/gifts_apis/example/: gifts_apis_example.dart
package/gifts_apis/lib/: gifts_apis.dart
package/gifts_apis/test/: gifts_apis_test.dart
package/gifts_cli/: pubspec.yaml
package/gifts_cli/example/: gifts_cli_example.dart
package/gifts_cli/lib/: gifts_cli.dart
package/gifts_cli/test/: gifts_cli_test.dart
package/gifts_client/: pubspec.yaml
package/gifts_client/example/: gifts_client_example.dart
package/gifts_client/lib/: gifts_client.dart
package/gifts_client/test/: gifts_client_test.dart
package/gifts_dart/: pubspec.yaml
package/gifts_dart/example/: gifts_dart_example.dart
package/gifts_dart/lib/: gifts_dart.dart
package/gifts_dart/test/: gifts_dart_test.dart
package/gifts_flutter/: pubspec.yaml
package/gifts_flutter/lib/: gifts_flutter.dart
package/gifts_flutter/test/: gifts_flutter_test.dart
package/gifts_fucshia/: pubspec.yaml
package/gifts_fucshia/lib/: gifts_fucshia.dart
package/gifts_fucshia/test/: gifts_fucshia_test.dart
package/gifts_ios/: pubspec.yaml
package/gifts_linux/: pubspec.yaml
package/gifts_macos/: pubspec.yaml
package/gifts_server/: pubspec.yaml
package/gifts_web/: pubspec.yaml
package/gifts_windows/: pubspec.yaml
test/: gifts_test.dart
(+13 files in other folders)
